--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,13 @@ node_modules
 .next
 .DS_Store
 yarn-error.log
+.yalc
+yalc.lock
 dist
 examples
 packages
+
+public/*.st
+public/*.toml
+public/.nextra
+.vercel
