--- a/package.json
+++ b/package.json
@@ -7,23 +7,27 @@
     "dev": "next",
     "start": "next start",
     "build": "next build",
-    "lint": "next lint"
+    "lint": "next lint",
+    "debug": "NODE_OPTIONS='--inspect' next"
   },
   "author": "Shu Ding",
   "license": "MIT",
   "dependencies": {
     "next": "^12.1.0",
     "nextra": "^1.1.0",
-    "nextra-theme-docs": "^1.2.2",
+    "nextra-theme-docs": "^1.2.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
     "@types/react": "^17.0.1",
+    "autoprefixer": "^10.4.7",
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
+    "postcss": "^8.4.14",
     "prettier": "^2.0.5",
+    "tailwindcss": "^3.1.4",
     "typescript": "^4.7.4"
   },
   "prettier": {
